--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.888.0",
+    "@aws-sdk/s3-request-presigner": "^3.888.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
